# tide

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  project.4coder
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb/: stb_ds.h
src/: tide_bootstrap.cpp  tide_display.cpp  tide_display.h  tide_frame.cpp  tide_frame.h  tide_gl.cpp  tide_gl.h  tide_log.h  tide_math.h  tide_process.cpp  tide_process.h  tide_sdf.cpp  tide_sdf.h  tide_stb.cpp  tide_text_rendering.cpp  tide_text_rendering.h
